[package]
name = "go_game_board"
version = "0.1.0"
edition = "2021"
description = "Go/Baduk/Weiqi rules implementation with libEGo-based algorithms"
license = "Apache-2.0"
repository = "https://github.com/lukaszlew/go_game_board"
keywords = ["go", "baduk", "weiqi", "board", "game"]
categories = ["game-development", "algorithms"]

[dependencies]
arrayvec = "0.7.6"
lazy_static = "1.4"
perf-event = "0.4"
go_game_types = "1.0.1"

# Default profile for users - fast compilation, decent performance
[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# Custom profile for benchmarking - users won't use this accidentally
[profile.release-lto]
inherits = "release"
lto = "fat"
codegen-units = 1
